--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,18 +66,23 @@ dependencies = [
 ]
 
 [tool.hatch.envs.default.scripts]
-migrate = "python -m migrate"
 test-a = "pytest --ds=testproject.settings -m 'not settings_b' {args:tests}"
 test-b = "pytest --ds=testproject.settings_b -m 'not default_user' {args:tests}"
-test = ["migrate", "test-a", "test-b"]
+test = ["test-a", "test-b"]
 
 test-cov-a = "coverage run -m pytest --ds=testproject.settings -m 'not settings_b' {args:tests}"
 test-cov-b = "coverage run -m pytest --ds=testproject.settings_b -m 'not default_user' {args:tests}"
-test-cov = ["migrate", "test-cov-a", "test-cov-b"]
+test-cov = ["test-cov-a", "test-cov-b"]
 
 cov-report = ["- coverage combine", "coverage report"]
 cov = ["test-cov", "cov-report"]
-serve = "./testproject/manage.py runserver"
+
+makemigrations = "python -m manage makemigrations"
+migrate = "python -m manage migrate"
+createsuperuser = "python -m manage createsuperuser"
+createsuperuserauto = "python -m manage createsuperuserauto"
+bootstrap = ["migrate", "createsuperuserauto"]
+serve = "python -m manage runserver"
 
 # Testing
 
