--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ PyJWT = ">=2.6.0,<3.0"
 pillow = { version = ">=9.5,<11.0", extras = ["captcha"] }
 django-stubs = { extras = ["compatible-mypy"], version = "^4.2.0" }
 strawberry-graphql-django = ">=0.10.5"
+strawberry-graphql = ">=0.220.0"
 
 [tool.poetry.extras]
 captcha = ["pillow"]
