--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,10 +19,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        #python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-        python-version: ["3.10", "3.11", "3.12"]
-        #django-version: ["3.2.25", "4.1.13", "4.2.11", "5.0.3"]
-        django-version: ["4.2.11", "5.0.3"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        django-version: ["3.2.25", "4.1.13", "4.2.11", "5.0.3"]
         exclude:
           # excludes Python 3.8 and 3.9 for Django 5.0.3
           - django-version: "5.0.3"
