--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   deploy:
     name: Deploy
+    permissions: write-all
     environment: Deployment
     runs-on: ubuntu-latest
     if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
@@ -14,29 +15,24 @@ jobs:
     steps:
         - uses: actions/checkout@v3
         - name: Set up Python
-          uses: actions/setup-python@v5
+          uses: actions/setup-python@v4
           with:
-            python-version: "3.x"
+            python-version: 3.11
         - name: Install deps
           run: |
-            python -m pip install pip --upgrade
-            python -m pip install poetry githubrelease httpx==0.18.2 autopub poetry
-
+            python -m pip install poetry
+            poetry install
+            poetry run pip install githubrelease
 
         - name: Check if we should release
           id: check_release
-          run: |
-            set +e
-            echo ::set-output name=release::$(autopub check)
+          run: cd .github && poetry run python -m workflows.management check-release
         - name: Publish
-          if: steps.check_release.outputs.release == ''
+          if: steps.check_release.outputs.status == ''
           env:
-            GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+            BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
             POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
           run: |
             git remote set-url origin https://${{ secrets.BOT_TOKEN }}@github.com/${{ github.repository }}
-            autopub prepare
-            poetry build
-            autopub commit
-            autopub githubrelease
+            cd .github && poetry run python -m workflows.management release
             poetry publish --username __token__
