--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ setuptools = ">=67.6.0"
 channels = { extras = ["daphne"], version = ">=4.0.0" }
 pytest-django = "^4.5.2"
 typer = "^0.12.1"
+pygithub = "^2.3.0"
 
 
 [tool.pytest.ini_options]
