--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ channels = { extras = ["daphne"], version = ">=4.0.0" }
 pytest-django = "^4.5.2"
 typer = "^0.12.1"
 pygithub = "^2.3.0"
+httpx = "^0.27.0"
 
 
 [tool.pytest.ini_options]
