--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,26 +13,22 @@ jobs:
     if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
 
     steps:
-        - uses: actions/checkout@v3
-        - name: Set up Python
-          uses: actions/setup-python@v4
-          with:
-            python-version: 3.11
-        - name: Install deps
-          run: |
-            python -m pip install poetry
-            poetry install
-            poetry run pip install githubrelease
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          python-version: "3.12"
+      - name: Install deps
+        run: uv sync --all-extras --frozen
 
-        - name: Check if we should release
-          id: check_release
-          run: cd .github && poetry run python -m workflows.management check-release
-        - name: Publish
-          if: steps.check_release.outputs.status == ''
-          env:
-            BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-            POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
-          run: |
-            git remote set-url origin https://${{ secrets.BOT_TOKEN }}@github.com/${{ github.repository }}
-            cd .github && poetry run python -m workflows.management release
-            poetry publish --username __token__
+      - name: Check if we should release
+        id: check_release
+        run: cd .github && uv run python -m workflows.management check-release
+      - name: Publish
+        if: steps.check_release.outputs.status == ''
+        env:
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+        run: |
+          git remote set-url origin https://${{ secrets.BOT_TOKEN }}@github.com/${{ github.repository }}
+          cd .github && uv run python -m workflows.management release
+          uv publish --token ${{ secrets.PYPI_TOKEN }}
