--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ django_find_project = false
 minversion = "6.0"
 addopts = "-ra -q"
 testpaths = ["tests"]
-DJANGO_SETTINGS_MODULE = "tests.testproject.settings"
+DJANGO_SETTINGS_MODULE = "tests.testproject.settings_b"
 python_files = "tests.py test_*.py *_tests.py"
 asyncio_mode = "auto"
 markers = [
