--- a/.github/workflows/bot_comment.yml
+++ b/.github/workflows/bot_comment.yml
@@ -1,7 +1,7 @@
 name: 🫸 Bot comment
 
 on:
-  pull_request:
+  pull_request_target:
     types: [synchronize, reopened, opened, ready_for_review]
     branches:
       - main
