--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,11 +7,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
         with:
-          python-version: 3.12
-      - run: |
-          pip install poetry
-          poetry install
-          make deploy-docs
+          python-version: "3.12"
+      - name: Install deps
+        run: uv sync --all-extras --frozen
+      - name: Install Task
+        uses: arduino/setup-task@v2
+      - name: Deploy docs
+        run: |
+          task deploy_docs
