--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,4 +31,5 @@ jobs:
         run: |
           git remote set-url origin https://${{ secrets.BOT_TOKEN }}@github.com/${{ github.repository }}
           cd .github && uv run python -m workflows.management release
+          uv build
           uv publish --token ${{ secrets.PYPI_TOKEN }}
