Use pyproject-fmt to have consistent formatting in pyproject.toml file

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,15 @@ repos:
       - id: check-added-large-files
         args: ["--maxkb=1024"]
 
+  - repo: https://github.com/tox-dev/pyproject-fmt
+    rev: v2.11.1
+    hooks:
+      - id: pyproject-fmt
+        args: [
+          "--indent", "4",
+          "--keep-full-version",
+        ]
+
   - repo: https://github.com/codespell-project/codespell
     rev: v2.4.1
     hooks:
