Update dependency group config
Resolves

> warning: The `tool.uv.dev-dependencies` field (used in `pyproject.toml`) is deprecated and will be removed in a future release; use `dependency-groups.dev` instead

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,8 @@ urls.Homepage = "https://github.com/nrbnlulu/strawberry-django-auth"
 [tool.hatch.build.targets.wheel]
 packages = [ "gqlauth" ]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pre-commit>=4.0.1",
     "coverage>=7.2",
     "pytest>=7.2",
