--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,37 +37,37 @@ optional-dependencies.captcha = [ "pillow>=11.0.0" ]
 urls.Documentation = "https://nrbnlulu.github.io/strawberry-django-auth/"
 urls.Homepage = "https://github.com/nrbnlulu/strawberry-django-auth"
 
-[tool.hatch.build.targets.wheel]
-packages = [ "gqlauth" ]
-
 [dependency-groups]
 dev = [
-    "pre-commit>=4.0.1",
+    "channels[daphne]>=4.0.0",
     "coverage>=7.2",
-    "pytest>=7.2",
-    "pytest-cov>=4,<6",
-    "types-cryptography>=3.3.23",
     "django-mock-queries>=2.1.7",
-    "types-mock>=5.0.0",
-    "types-jwt>=0.1.0",
+    "faker>=18.2.0",
+    "httpx>=0.27.0",
+    "jinja2>=3.1.4",
+    "markdown>=3.4.1",
     "mkdocs>=1.3.0",
     "mkdocs-markdownextradata-plugin>=0.2.5",
     "mkdocs-material>=8.5.4",
     "mkdocs-minify-plugin>=0.5.0",
-    "pymdown-extensions>=9.9",
-    "Markdown>=3.4.1",
-    "Faker>=18.2.0",
-    "pytest-asyncio>=0.21.0",
+    "pre-commit>=4.0.1",
     "pydoc-markdown[novella]>=4.6.4",
-    "setuptools>=67.6.0",
-    "channels[daphne]>=4.0.0",
-    "pytest-django>=4.5.2",
-    "typer>=0.12.1",
     "pygithub>=2.3.0",
-    "httpx>=0.27.0",
-    "jinja2>=3.1.4",
+    "pymdown-extensions>=9.9",
+    "pytest>=7.2",
+    "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4,<6",
+    "pytest-django>=4.5.2",
+    "setuptools>=67.6.0",
     "toml>=0.10.2",
+    "typer>=0.12.1",
+    "types-cryptography>=3.3.23",
+    "types-jwt>=0.1.0",
+    "types-mock>=5.0.0",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = [ "gqlauth" ]
 
 [tool.ruff]
 lint.select = [ "E", "ERA", "F", "I" ]
