--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,12 @@ jobs:
       fail-fast: false
       matrix:
         django-version: ["4.2", "5.1"]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
+        exclude:
+          - django-version: "4.2"
+            python-version: "3.14"
+          - django-version: "5.1"
+            python-version: "3.14"
 
     steps:
       - uses: actions/checkout@v6
