Use official GitHub Action for installing Task
> We have an official GitHub Action to install Task in your GitHub workflows. This repository is forked from the fantastic project by the Arduino team. Check out the repository for more examples and configuration.

https://taskfile.dev/docs/installation#github-actions

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install deps
         run: uv sync --all-extras --frozen
       - name: Install Task
-        uses: arduino/setup-task@v2
+        uses: go-task/setup-task@v1
       - name: Deploy docs
         run: |
           task deploy_docs
