--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        django-version: ["4.2", "5.0", "5.1"]
+        django-version: ["4.2", "5.1"]
         python-version: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
