--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "django>=4.2,<5.3",
+    "django>=4.2,<5.3,!=5.0.*",
     "django-stubs[compatible-mypy]>=4.2.0",
     "pyjwt>=2.6.0,<3.0",
     "strawberry-graphql-django>=0.47.0",
