--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
     "Framework :: Django :: 4.2",
+    "Framework :: Django :: 5.2",
+    "Framework :: Django :: 6.0",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
@@ -29,7 +31,7 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
-    "django>=4.2,<5.3,!=5.0.*,!=5.1.*",
+    "django>=4.2,<6.1,!=5.0.*,!=5.1.*",
     "django-stubs[compatible-mypy]>=4.2.0",
     "pyjwt>=2.6.0,<3.0",
     "strawberry-graphql-django>=0.47.0",
