--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
     "Framework :: Django :: 4.2",
-    "Framework :: Django :: 5.1",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
@@ -30,7 +29,7 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
 ]
 dependencies = [
-    "django>=4.2,<5.3,!=5.0.*",
+    "django>=4.2,<5.3,!=5.0.*,!=5.1.*",
     "django-stubs[compatible-mypy]>=4.2.0",
     "pyjwt>=2.6.0,<3.0",
     "strawberry-graphql-django>=0.47.0",
