--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,11 @@ dependencies = [
     "pyjwt>=2.6.0,<3.0",
     "strawberry-graphql-django>=0.47.0",
 ]
-optional-dependencies.captcha = [ "pillow>=11.0.0" ]
+optional-dependencies.captcha = [
+    # 12.0 is the min version with Python 3.14 support
+    # https://pillow.readthedocs.io/en/stable/installation/python-support.html
+    "pillow>=12.0.0"
+]
 urls.Documentation = "https://nrbnlulu.github.io/strawberry-django-auth/"
 urls.Homepage = "https://github.com/nrbnlulu/strawberry-django-auth"
 
