--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,9 @@ dependencies = [
     "django>=4.2,<6.1,!=5.0.*,!=5.1.*",
     "django-stubs[compatible-mypy]>=4.2.0",
     "pyjwt>=2.6.0,<3.0",
-    "strawberry-graphql-django>=0.47.0",
+    # 0.66.0 is the earliest version with Python 3.14 support
+    # https://github.com/strawberry-graphql/strawberry-django/releases/tag/v0.66.0
+    "strawberry-graphql-django>=0.66.0",
 ]
 optional-dependencies.captcha = [
     # 12.0 is the min version with Python 3.14 support
